@@ -1,3 +1,12 @@
+Tue Feb 12 00:26:23 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/compiler/TypeResolver.java: resolving
+	  VariableNode is useless, because it is equal to resolving
+	  DefinedVariable.
+
+	* net/loveruby/cflat/compiler/TypeResolver.java: define
+	  resolveNodeList, which is an alias of visitNodeList.
+
 Mon Feb 11 06:54:20 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/compiler/Compiler.java: new option
